# weather

./: CMakeLists.txt  weather.json
src/: main.cpp
src/darksky/: forecastData.h  forecastDownloader.h  forecastParser.h  iconManager.h
src/darksky/json/: json.h
src/gui/: Window.cpp  Window.h  currentlyDataWidget.h  currentlyDataWindow.h  temperatureChart.h
